--- a/Admin/src/index.css
+++ b/Admin/src/index.css
@@ -1,8 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/* Hide Scrollbar but Keep Scroll Functionality */
+*{
+    font-family: 'Outfit';
+}
+
+Hide Scrollbar but Keep Scroll Functionality
 .scrollbar-hidden::-webkit-scrollbar {
   width: 0;
   height: 0;
@@ -11,4 +17,8 @@
 .scrollbar-hidden {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+}
+
+::-webkit-scrollbar{
+    display: none;
 }
